+ new handler and logger to debug not exiting thread

--- a/scripts/logging_production.yaml
+++ b/scripts/logging_production.yaml
@@ -48,3 +48,8 @@ loggers:
         level: DEBUG
         handlers: [ console_info, error_file_handler ]
         propagate: no
+
+    thread_handler:
+        level: DEBUG
+        handlers: [ console_info, error_file_handler ]
+        propagate: no
