--- a/scripts/logging_debug.yaml
+++ b/scripts/logging_debug.yaml
@@ -33,6 +33,13 @@ handlers:
         encoding: utf8
         mode: a
 
+    thread_file_handler:
+        class: logging.FileHandler
+        level: DEBUG
+        formatter: standard
+        filename: /home/alisot2000/Documents/01_ReposNCode/ETH-Lecture-Indexer/logs/threads.log
+        encoding: utf8
+        mode: a
 root:
     level: DEBUG
     handlers: [console_info]
@@ -61,5 +68,13 @@ loggers:
         handlers:
             - console_info
             - debug_file_handler
+            - error_file_handler
+        propagate: no
+
+    thread_handler:
+        level: DEBUG
+        handlers:
+            - console_info
+            - thread_file_handler
             - error_file_handler
         propagate: no
