--- a/scripts/logging_production.yaml
+++ b/scripts/logging_production.yaml
@@ -53,3 +53,8 @@ loggers:
         level: DEBUG
         handlers: [ console_info, error_file_handler ]
         propagate: no
+
+    sanity_checker:
+        level: DEBUG
+        handlers: [ console_info, error_file_handler ]
+        propagate: no
