+ Added logging for increment_builder

--- a/scripts/logging_debug.yaml
+++ b/scripts/logging_debug.yaml
@@ -86,3 +86,11 @@ loggers:
             - thread_file_handler
             - error_file_handler
         propagate: no
+
+    increment_builder:
+        level: DEBUG
+        handlers:
+            - console_info
+            - thread_file_handler
+            - error_file_handler
+        propagate: no
