--- a/scripts/logging_production.yaml
+++ b/scripts/logging_production.yaml
@@ -58,3 +58,8 @@ loggers:
         level: DEBUG
         handlers: [ console_info, error_file_handler ]
         propagate: no
+
+    increment_builder:
+        level: DEBUG
+        handlers: [ console_info, error_file_handler ]
+        propagate: no
