--- a/scripts/logging_debug.yaml
+++ b/scripts/logging_debug.yaml
@@ -83,7 +83,7 @@ loggers:
         level: DEBUG
         handlers:
             - console_info
-            - thread_file_handler
+            - debug_file_handler
             - error_file_handler
         propagate: no
 
@@ -91,6 +91,6 @@ loggers:
         level: DEBUG
         handlers:
             - console_info
-            - thread_file_handler
+            - debug_file_handler
             - error_file_handler
         propagate: no
